# My_Bot_Geode

./: CMakeLists.txt  mod.json
.GitHub/Workflows/: build.yml
.github/workflows/: build.yml
src/: main.cpp
